--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run production"
-  environment = { 
+  command = "php artisan build"
+  environment = {
     PHP_VERSION = "8.1"
   }
